<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_infouser"
    tools:context=".DangBaiMoi">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/chu_luu_y_khi_dang_bai_2"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTheLoaiDangBaiMoi"
        android:layout_width="272dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:gravity="center|left"
        android:paddingLeft="7dp"
        android:text="TextView"
        android:textColor="#2200FF"
        app:layout_constraintEnd_toStartOf="@id/btnChonTheLoaiDangBaiMoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnChonTheLoaiDangBaiMoi"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="..."
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/edtTitleDangBanMoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/chu_nhap_ten_bai_viet"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTheLoaiDangBaiMoi" />

    <Button
        android:id="@+id/btnDangBaiNgayDangBaiMoi"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/chu_dang_bai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnThoatDangBaiMoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/chu_thoat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNangCaoDangBaiMoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/chu_them_noi_dung_hoac_nang_cao"
        app:layout_constraintBottom_toTopOf="@id/btnDangBaiNgayDangBaiMoi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/edtNoiDungDangBaiMoi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="#A2AEF1"
        android:hint="@string/chu_nhap_noi_dung_bai_viet"
        android:padding="5dp"
        android:textColor="#FF5722"
        android:textColorHint="#FF5722"
        app:layout_constraintBottom_toTopOf="@id/btnNangCaoDangBaiMoi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTitleDangBanMoi" />
</androidx.constraintlayout.widget.ConstraintLayout>